--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-    "name": "fastinni",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "pack": "webpack --config webpack.config.js",
-        "produce-win": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-        "produce": "NODE_ENV=production webpack --config webpack.config.js"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@babel/cli": "^7.23.4",
-        "@babel/core": "^7.23.6",
-        "@babel/preset-env": "^7.23.6",
-        "@babel/preset-react": "^7.23.3",
-        "@types/jquery": "^3.5.29",
-        "babel-loader": "^9.1.3",
-        "babel-plugin-macros": "^3.1.0",
-        "css-loader": "^6.8.1",
-        "html-webpack-plugin": "^5.6.0",
-        "jquery": "^3.7.1",
-        "mini-css-extract-plugin": "^2.7.6",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-icons": "^4.12.0",
-        "sass": "^1.69.5",
-        "sass-loader": "^13.3.3",
-        "style-loader": "^3.3.3",
-        "webpack": "^5.89.0",
-        "webpack-cli": "^5.1.4"
-    },
-    "devDependencies": {
-        "cross-env": "^7.0.3"
-    }
+  "name": "fastinni",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "pack": "webpack --config webpack.config.js",
+    "produce-win": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "produce": "NODE_ENV=production webpack --config webpack.config.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "babel-preset-react-optimize": "^1.0.1",
+    "@types/jquery": "^3.5.29",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-macros": "^3.1.0",
+    "css-loader": "^6.8.1",
+    "html-webpack-plugin": "^5.6.0",
+    "jquery": "^3.7.1",
+    "mini-css-extract-plugin": "^2.7.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
+  }
 }
