--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,25 +7,22 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+alembic = "^1.13.1"
+datetime = "^5.4"
 fastapi = "^0.108.0"
-uvicorn = "^0.25.0"
+fastapi-csrf-protect = "^0.3.3"
+oauthlib = "^3.2.2"
 python-dotenv = "^1.0.0"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 sqlmodel = "^0.0.14"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 psycopg = {extras = ["binary", "pool"], version = "^3.1.16"}
-alembic = "^1.13.1"
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
-python-jose = {extras = ["cryptography"], version = "^3.3.0"}
-
+requests = "^2.31.0"
+uvicorn = "^0.25.0"
 
 [tool.poetry.group.dev.dependencies]
-datetime = "^5.4"
-requests = "^2.31.0"
 pyopenssl = "^23.3.0"
-
-
-[tool.poetry.group.oauth.dependencies]
-oauthlib = "^3.2.2"
 
 [build-system]
 requires = ["poetry-core"]
